--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:400,100,600">
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
