--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,13 @@ h1 {
   letter-spacing: 2px;
 }
 
+h4 {
+  text-align: right;
+  font-weight: 100;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
 h3 {
   position: absolute;
   top: 0;
